# llm

./: .venv  Makefile  archive.py  decoder1.py  mypy.ini  pyproject.toml  test.py  tokenizer.json
.mypy_cache/: missing_stubs
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  (+239 more)
.mypy_cache/3.10/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.10/aiohappyeyeballs/: __init__.data.json  __init__.meta.json  _staggered.data.json  _staggered.meta.json  impl.data.json  impl.meta.json  (+4 more)
data/input/: function_calling_tests.json  functions_definition.json  p.json
data/output/: function_calling_results.json
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  decoder.py  main.py  models.py  parser.py  test.py
(+5353 files in other folders)
